--- a/homeapp/templates/homeapp/index.html
+++ b/homeapp/templates/homeapp/index.html
@@ -12,6 +12,11 @@
           <li>Защита деловой репутации в суде.</li>
           <li>Арбитражная практика.</li>
         </ul>
+        <div class="banner__text" style="max-width: none; margin-bottom: 0.75rem; margin-top: 1.5rem;">
+          Руководитель филиала, адвокат
+          <br>
+          <span style="font-size: 1.75em; font-weight: 700;">Борзиков Андрей Анатольевич</span>
+        </div>
         <p class="banner__desc">Общий юридический стаж более 20 лет;<br />
           Повышение квалификации НИУ ВШЭ;<br />
           Успешная адвокатская практика по делам о преступлениях тяжкой и особо-тяжкой категории;<br />
@@ -20,7 +25,6 @@
           <button type="button" class="button-white" data-bs-toggle="modal" data-bs-target="#exampleModal">
             Получить консультацию
           </button>
-          <button type="button" class="button-blue">Бидюк Егор Николаевич</button>
           <button type="button" class="button-blue">
             <span>Все адвокаты</span>
             <svg xmlns="http://www.w3.org/2000/svg"
