--- a/homeapp/static/homeapp/css/styles.css
+++ b/homeapp/static/homeapp/css/styles.css
@@ -246,11 +246,11 @@ body {
 }
 
 .mission img {
-  margin-left: auto;
+  margin: 0 auto;
   display: block;
   width: fit-content;
   max-width: 221px;
-  height: fit-content;
+  /*height: fit-content;*/
   object-fit: scale-down;
 }
 
