--- a/homeapp/templates/homeapp/base.html
+++ b/homeapp/templates/homeapp/base.html
@@ -162,12 +162,12 @@
             <ul class="dropdown-menu">
               <li>
                 <a class="dropdown-item" href="{% url 'homeapp:team' %}">
-                  Офис в Москве
+                  Филиал в Ульяновске
                 </a>
               </li>
               <li>
-                <a class="dropdown-item" href="https://ulsk.mkapartner.ru/">
-                  Филиал в Ульяновске
+                <a class="dropdown-item" href="https://mkapartner.ru/">
+                  Офис в Москве
                 </a>
               </li>
             </ul>
@@ -206,7 +206,7 @@
             </a>
           </li>
           <li class="nav-item p-1">
-            <a class="nav-link" aria-current="page" href="https://t.me/MBA_Partner">
+            <a class="nav-link" aria-current="page" href="https://t.me/ulskpartner">
               <img style="
                     width: 32px;
                     object-fit: scale-down;
@@ -215,7 +215,7 @@
             </a>
           </li>
           <li class="nav-item p-1">
-            <a class="nav-link" aria-current="page" href="tel:+79671328133">
+            <a class="nav-link" aria-current="page" href="tel:+79672378797">
               <img style="
                     width: 32px;
                     object-fit: scale-down;
@@ -226,7 +226,7 @@
         </ul>
 
         <div class="menu">
-          <a class="button-white" href="tel:+79671328133">8 967 132 81 33</a>
+          <a class="button-white" href="tel:+79672378797">8 967 237 87 97</a>
         </div>
       </div>
     </div>
@@ -320,13 +320,13 @@
                   Получить консультацию и пошаговый план действий
                 </p>
                 <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="mailto:info@mkapartner.ru">
-                    info@mkapartner.ru
+                  <a class="nav-link" aria-current="page" href="mailto:ulsk@mkapartner.ru">
+                    ulsk@mkapartner.ru
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="tel:+79671328133">
-                    +79671328133
+                  <a class="nav-link" aria-current="page" href="tel:+79672378797">
+                    +7 967 237 8797
                   </a>
                 </li>
                 <p class="mb-2" style="
@@ -339,10 +339,10 @@
                   Адрес
                 </p>
                 <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="https://yandex.ru/maps/-/CDFTaX~8">
-                    123112, Россия, г.Москва,
+                  <a class="nav-link" aria-current="page" href="https://yandex.ru/maps/-/CDhkM8Ll">
+                    432000, Россия, г.Ульяновск,
                     <br />
-                    Пресненская наб., д. 12, помещ. 45н
+                    ул.Спасская 8 (Гостиница "Советская" 2 этаж)
                   </a>
                 </li>
               </ul>
@@ -350,8 +350,8 @@
           </div>
           <div class="footer-menu">
             <div class="footer__buttons" style="display: flex; gap: 8px">
-              <a class="btn2 button-blue" href="tel:+79671328133">
-                8 967 132 81 33
+              <a class="btn2 button-blue" href="tel:+79672378797">
+                8 967 237 8797
               </a>
 
               <button type="button" class="btn1 button-white" data-bs-toggle="modal" data-bs-target="#exampleModal">
@@ -365,7 +365,7 @@
                 </a>
               </div>
               <div class="text-center">
-                <a class="nav-link footer__nav-link" aria-current="page" href="tel:+79671328133">
+                <a class="nav-link footer__nav-link" aria-current="page" href="tel:+79672378797">
                   <i class="fa-brands fa-whatsapp fa-2xl" style="color: white;"></i>
                 </a>
               </div>
