--- a/homeapp/templates/homeapp/forms/amo-form.html
+++ b/homeapp/templates/homeapp/forms/amo-form.html
@@ -1,28 +1,3 @@
 <!-- Вставка скрипта AmoCRM -->
 
-<script>
-  !function(window, undefined, amo_forms_, params, load, loaded){
-    window[amo_forms_ + params] = window[amo_forms_ + params] || {
-      setMeta: function(p){
-        this.params = (this.params || []).concat([p]);
-      }
-    };
-
-    window[amo_forms_ + load] = window[amo_forms_ + load] || function(f){
-      window[amo_forms_ + load].f = (window[amo_forms_ + load].f || []).concat([f]);
-    };
-
-    window[amo_forms_ + load]({
-      id: "1432202",
-      hash: "ebb16bb1cc2d800f5cb7316670a2f786",
-      locale: "ru"
-    });
-
-    window[amo_forms_ + loaded] = window[amo_forms_ + loaded] || function(f, k){
-      window[amo_forms_ + loaded].f = (window[amo_forms_ + loaded].f || []).concat([[f, k]]);
-    };
-
-  }(window, 0, "amo_forms_", "params", "load", "loaded");
-</script>
-
-<script id="amoforms_script_1432202" async="async" charset="utf-8" src="https://forms.amocrm.ru/forms/assets/js/amoforms.js?1729708250"></script>
+<script>!function(a,m,o,c,r,m){a[o+c]=a[o+c]||{setMeta:function(p){this.params=(this.params||[]).concat([p])}},a[o+r]=a[o+r]||function(f){a[o+r].f=(a[o+r].f||[]).concat([f])},a[o+r]({id:"1435358",hash:"f19e4d88b000896da313a2a60d169dda",locale:"ru"}),a[o+m]=a[o+m]||function(f,k){a[o+m].f=(a[o+m].f||[]).concat([[f,k]])}}(window,0,"amo_forms_","params","load","loaded");</script><script id="amoforms_script_1435358" async="async" charset="utf-8" src="https://forms.amocrm.ru/forms/assets/js/amoforms.js?1730215983"></script>
