--- a/homeapp/templates/homeapp/base.html
+++ b/homeapp/templates/homeapp/base.html
@@ -381,10 +381,9 @@
 
         <div>
           <p style="color: rgb(255, 255, 255);
-    
             font-size: 12px;
             font-weight: 400;">
-            Copyright © 2024 Московская колления адвокатов "Партнер Групп".
+            Copyright © 2025 Московская коллегия адвокатов "Партнер Групп".
             При использовании любой информации, оставляйте ссылку на сайт.
             <a style="text-decoration: none; color: white;" href="{% url 'homeapp:privicy' %}">
               Политика конфиденциальности
@@ -479,7 +478,7 @@
     </section>
   </footer>
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
     crossorigin="anonymous"></script>
@@ -501,129 +500,84 @@
       diplomaImages.forEach(function (image) {
         // Обработчик клика для каждого изображения
         image.addEventListener('click', function (image) {
-          console.log(image)
-          // Подставляем URL изображения в модальное окно
           modalImage.src = event.target.src;
-          console.log(modalImage.alt)
           modalImage.alt = event.target.alt;
           modalLabel.innerHTML = event.target.alt;
         });
       });
-    });
-  </script>
 
-  <script type="text/javascript">
-    $(".team-slider").slick({
-      dots: true,
-      infinite: true,
-      speed: 300,
-      slidesToShow: 3,
-      slidesToScroll: 1,
-      responsive: [
-        {
-          breakpoint: 1024,
-          settings: {
-            slidesToShow: 2,
-            slidesToScroll: 1,
-            infinite: true,
-            dots: true,
-          },
-        },
-        {
-          breakpoint: 767,
-          settings: {
-            slidesToShow: 1,
-            slidesToScroll: 1,
-          },
-        },
-        {
-          breakpoint: 520,
-          settings: {
-            slidesToShow: 1,
-            slidesToScroll: 1,
-            dots: false,
-          },
+
+      const input = document.body.querySelector(".telmask");
+      input?.addEventListener("keypress", (evt) => {
+        if (evt.keyCode < 47 || evt.keyCode > 57) {
+          evt.preventDefault();
         }
-      ],
-    });
-  </script>
-  <script>
-    const input = document.body.querySelector(".telmask");
+      });
 
-    input.addEventListener("keypress", (evt) => {
-      if (evt.keyCode < 47 || evt.keyCode > 57) {
-        evt.preventDefault();
-      }
-    });
+      input?.addEventListener("focus", () => {
+        if (input.value.length === 0) {
+          input.value = "+7";
+          input.selectionStart = input.value.length;
+        }
+      });
 
-    input.addEventListener("focus", () => {
-      if (input.value.length === 0) {
-        input.value = "+7";
-        input.selectionStart = input.value.length;
-      }
-    });
+      input?.addEventListener("click", (evt) => {
+        if (input.selectionStart < 2) {
+          input.selectionStart = input.value.length;
+        }
+        if (evt.key === "Backspace" && input.value.length <= 2) {
+          evt.preventDefault();
+        }
+      });
 
-    input.addEventListener("click", (evt) => {
-      if (input.selectionStart < 2) {
-        input.selectionStart = input.value.length;
-      }
-      if (evt.key === "Backspace" && input.value.length <= 2) {
-        evt.preventDefault();
-      }
-    });
+      input?.addEventListener("blur", () => {
+        if (input.value === "+7") {
+          input.value = "";
+        }
+      });
 
-    input.addEventListener("blur", () => {
-      if (input.value === "+7") {
-        input.value = "";
-      }
-    });
+      input?.addEventListener("keydown", (evt) => {
+        if (evt.key === "Backspace" && input.value.length <= 2) {
+          evt.preventDefault();
+        }
+      });
 
-    input.addEventListener("keydown", (evt) => {
-      if (evt.key === "Backspace" && input.value.length <= 2) {
-        evt.preventDefault();
-      }
-    });
-  </script>
-  <script>
-    const input_1 = document.body.querySelector(".phone_mask");
+      const input_1 = document.body.querySelector(".phone_mask");
+      input_1?.addEventListener("keypress", (evt) => {
+        if (evt.keyCode < 47 || evt.keyCode > 57) {
+          evt.preventDefault();
+        }
+      });
 
-    input_1.addEventListener("keypress", (evt) => {
-      if (evt.keyCode < 47 || evt.keyCode > 57) {
-        evt.preventDefault();
-      }
-    });
+      input_1?.addEventListener("focus", () => {
+        if (input_1.value.length === 0) {
+          input_1.value = "+7";
+          input_1.selectionStart = input_1.value.length;
+        }
+      });
 
-    input_1.addEventListener("focus", () => {
-      if (input_1.value.length === 0) {
-        input_1.value = "+7";
-        input_1.selectionStart = input_1.value.length;
-      }
-    });
+      input_1?.addEventListener("click", (evt) => {
+        if (input_1.selectionStart < 2) {
+          input_1.selectionStart = input_1.value.length;
+        }
+        if (evt.key === "Backspace" && input_1.value.length <= 2) {
+          evt.preventDefault();
+        }
+      });
 
-    input_1.addEventListener("click", (evt) => {
-      if (input_1.selectionStart < 2) {
-        input_1.selectionStart = input_1.value.length;
-      }
-      if (evt.key === "Backspace" && input_1.value.length <= 2) {
-        evt.preventDefault();
-      }
-    });
+      input_1?.addEventListener("blur", () => {
+        if (input_1.value === "+7") {
+          input_1.value = "";
+        }
+      });
 
-    input_1.addEventListener("blur", () => {
-      if (input_1.value === "+7") {
-        input_1.value = "";
-      }
-    });
+      input_1?.addEventListener("keydown", (evt) => {
+        if (evt.key === "Backspace" && input_1.value.length <= 2) {
+          evt.preventDefault();
+        }
+      });
 
-    input_1.addEventListener("keydown", (evt) => {
-      if (evt.key === "Backspace" && input_1.value.length <= 2) {
-        evt.preventDefault();
-      }
-    });
-  </script>
 
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
       var submenus = document.querySelectorAll(
         ".dropdown-submenu .dropdown-toggle"
       );
