Обновлен ридми. Обновлен мейк. Добавлено поле видео ссылки в форму админки новостей. поле выведено. Создана миграция. В шаблонах новостей прокинута переменная. Исправлены баги в cases_auto.html

--- a/app/homeapp/templates/homeapp/cases_auto.html
+++ b/app/homeapp/templates/homeapp/cases_auto.html
@@ -28,7 +28,7 @@
     </div>
 
 <div class="form-wrapper">
-    {% include "homeapp/forms/forms/amo-form.html" %}
+    {% include "homeapp/forms/amo-form.html" %}
 </div>
 </div>
 
