--- a/app/homeapp/templates/homeapp/news_detail.html
+++ b/app/homeapp/templates/homeapp/news_detail.html
@@ -16,6 +16,9 @@
                     <div class="bode-text">
                         {{ news_obj.text|safe }}
                     </div>
+                    <div>
+                        {{ news_obj.video_link }}
+                    </div>
                 </div>
             </div>
         </div>
