правки по фронту начало

--- a/app/homeapp/templates/homeapp/news_list.html
+++ b/app/homeapp/templates/homeapp/news_list.html
@@ -15,7 +15,7 @@
                 <div class="col-md-5">
                     <div class="news_item latest_news">
                         <div class="news_item_header">
-                            <p class="text-end news__date">{{ News.0.create_datetime }}</p>
+                            <p class="news__date">{{ News.0.create_datetime }}</p>
                             <h2 class="page-section__title">{{ News.0.title }}</h2>
                         </div>
                         <div class="news_item_content">
@@ -61,7 +61,7 @@
                         <div class="news_content-group">
                             <div class="news__header">
                                 <h1 class="news__title">{{ news.title }}</h1>
-                                <p class="text-end news__date">{{ news.create_datetime }}</p>
+                                <p class="news__date">{{ news.create_datetime }}</p>
                             </div>
                             <div class="news_item_content">
                                 <p>{{ news.text|safe }}</p>
