--- a/app/homeapp/static/homeapp/scss/_home.scss
+++ b/app/homeapp/static/homeapp/scss/_home.scss
@@ -474,6 +474,7 @@
 	text-align: center;
 	color: #fff;
 	z-index: 1;
+
 	&.overlay {
 		&:after {
 			background: #000;
@@ -488,6 +489,22 @@
 		margin-top: 15px;
 	}
 }
+
+.cta-area__title {
+	margin: 0 0 30px;
+	font-size: 32px;
+	font-weight: 400;
+	text-align: left;
+	color: white;
+}
+
+.cta-area__text {
+	margin: 0 0 30px;
+	color: white;
+}
+
+
+
 /* End CTA Area css
 ============================================================================================ */
 
