--- a/app/homeapp/templates/homeapp/base.html
+++ b/app/homeapp/templates/homeapp/base.html
@@ -3,8 +3,40 @@
 <html lang="en">
 
 <head>
-  <script src="{% static 'homeapp/js/preloader.js' %}"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>{{ title }}</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="{% static 'homeapp/css/style.css' %}" />
+  <link rel="stylesheet" href="{% static 'homeapp/css/styles.css' %}" />
+  <link rel="stylesheet" href="{% static 'homeapp/css/news_slider.css' %}" />
   <link rel="stylesheet" href="{% static 'homeapp/css/preloader.css' %}" />
+  <link rel="stylesheet" href="{% static 'homeapp/styles/main.css' %}" />
+  <link rel="shortcut icon" type="image/png" href="{% static 'homeapp/img/bg-logo.ico' %}" />
+  <style>
+    @media (max-width: 930px) {
+      #carouselExampleAutoplaying {
+        display: none;
+      }
+    }
+  </style>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet" />
+
   <!-- Yandex.Metrika counter -->
   <script type="text/javascript">
     (function (m, e, t, r, i, k, a) {
@@ -44,51 +76,16 @@
       <img src="https://mc.yandex.ru/watch/94569343" style="position: absolute; left: -9999px" alt="" />
     </div>
   </noscript>
-  <!-- /Yandex.Metrika counter -->
   <meta name="yandex-verification" content="5ceccd2da73fbdf4" />
-
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>{{ title }}</title>
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="{% static 'homeapp/css/style.css' %}" />
-  <link rel="stylesheet" href="{% static 'homeapp/css/styles.css' %}" />
-  <link rel="stylesheet" href="{% static 'homeapp/css/news_slider.css' %}" />
-  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css" />
-  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
-    integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
-    integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="shortcut icon" type="image/png" href="{% static 'homeapp/img/bg-logo.ico' %}" />
-  <style>
-    @media (max-width: 930px) {
-      #carouselExampleAutoplaying {
-        display: none;
-      }
-    }
-  </style>
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet" />
 </head>
 
 <body>
-  <div class="preloader">
+  <!-- <div class="preloader">
     <div class="preloader__row">
       <div class="preloader__item"></div>
       <div class="preloader__item"></div>
     </div>
-  </div>
+  </div> -->
   {% for message in messages %} {% if message.tags == 'success' %}
   <div class="alert alert-success alert-dismissible fade show text-center h3 {{ message.tags }}" role="alert">
     <strong>{{ message }}</strong>
@@ -244,8 +241,6 @@
               <ul class="list-unstyled">
                 <li style="
                       color: rgba(255, 255, 255, 0.7);
-  
-                      font-size: 14px;
                       font-weight: 400;
                       margin-bottom: 8px;
                     ">
@@ -313,8 +308,6 @@
               <ul class="list-unstyled">
                 <p style="
                       color: rgba(255, 255, 255, 0.7);
-  
-                      font-size: 14px;
                       font-weight: 400;
                     " class="footer__text mb-2">
                   Получить консультацию и пошаговый план действий
@@ -331,8 +324,6 @@
                 </li>
                 <p class="mb-2" style="
                       color: rgba(255, 255, 255, 0.7);
-  
-                      font-size: 14px;
                       font-weight: 400;
                       margin-top: 24px;
                     ">
@@ -609,6 +600,7 @@
 
   <script src="{% static 'homeapp/js/main.js' %}"></script>
   <script src="{% static 'homeapp/js/slider.js' %}"></script>
+  <!-- <script src="{% static 'homeapp/js/preloader.js' %}"></script> -->
 </body>
 
 </html>
