Добавлен редактор стиля в админку в поле текста новостей. В шаблоне разводящей страницу фильтр с save (убирает экранирование) заменен на striptags (удаляет теги хранимые в тексте). В Poetry добавлена библиотека ckeditor. Создана миграция. В .gitignore добавлено содержимое staticfiles

--- a/app/homeapp/templates/homeapp/news_list.html
+++ b/app/homeapp/templates/homeapp/news_list.html
@@ -66,7 +66,7 @@
                             <div class="news_item_content">
                                 <p>{{ news.text|safe }}</p>
                             </div>
-                            <div>{{ news.video_link }}</div>
+                            <div>{{ news.video_link.striptags }}</div>
                         </div>
                         <div class="news_item_fakelink">Подробнее</div>
                     </div>
