Добавлено фк поле в PracticeInstance модель. В админку новое поле добавлено в отображение и фильтрацию. В шаблоны деталики и скиска добавлен вывод ссылки и имени связанного адвоката через теги. Добавлена миграция

--- a/app/homeapp/templates/homeapp/practice_category_list.html
+++ b/app/homeapp/templates/homeapp/practice_category_list.html
@@ -20,6 +20,8 @@
                     <span>
                         {{ practice.title }}
                     </span>
+                    <img src="{{ practice.partner.photo.url }}" alt="">
+                    <p>{{ practice.partner.name }}</p>
                     <img src="{% static 'homeapp/img/arrow-right.png' %}" alt="" />
                 </a>
             </li>
