Добавлена модель отзывов. Модель зарегестрирована в админке. Добавлен вью класс. Вью зарегестрировано в urls.py. Ссылка на новую страницу добавлена в основное меня, в меню для экрана и мобилки. На главную страницу добавлен блок отзывов. Добавлен шаблон отзывов. Добавлена миграция.

--- a/app/homeapp/templates/homeapp/base.html
+++ b/app/homeapp/templates/homeapp/base.html
@@ -173,6 +173,10 @@
             <a class="nav-link" aria-current="page" href="{% url 'homeapp:news_list' %}">
               Новости
             </a>
+          </li><li class="nav-item">
+            <a class="nav-link" aria-current="page" href="{% url 'homeapp:reviews' %}">
+              Отзывы
+            </a>
           </li>
           <li class="nav-item dropdown">
             <ul class="dropdown-menu dropdown-menu-search" aria-labelledby="navbarDropdown">
@@ -299,6 +303,11 @@
                 <li class="nav-item nav_footer">
                   <a class="nav-link" aria-current="page" href="{% url 'homeapp:news_list' %}">
                     Новости
+                  </a>
+                </li>
+                <li class="nav-item nav_footer">
+                  <a class="nav-link" aria-current="page" href="{% url 'homeapp:reviews' %}">
+                    Отзывы
                   </a>
                 </li>
               </ul>
