Добавлена модель клиента. Модель зарегистрирована в админке. Добавлен вью-класс для вывода клиентов. Вью зарегистрирован в urls.py. Добавлен шаблон страницы клиентов. Добавлена ссылка на страницу в главное меню. Добавлена миграция. Актуализирован .gitignore

--- a/app/homeapp/templates/homeapp/base.html
+++ b/app/homeapp/templates/homeapp/base.html
@@ -177,6 +177,11 @@
               Отзывы
             </a>
           </li>
+          </li><li class="nav-item">
+            <a class="nav-link" aria-current="page" href="{% url 'homeapp:client_list' %}">
+              Клиенты
+            </a>
+          </li>
           <li class="nav-item dropdown">
             <ul class="dropdown-menu dropdown-menu-search" aria-labelledby="navbarDropdown">
               <li class="dropdown-search">
@@ -306,6 +311,11 @@
                 <li class="nav-item nav_footer">
                   <a class="nav-link" aria-current="page" href="{% url 'homeapp:reviews' %}">
                     Отзывы
+                  </a>
+                </li>
+                <li class="nav-item nav_footer">
+                  <a class="nav-link" aria-current="page" href="{% url 'homeapp:client_list' %}">
+                    Клиенты
                   </a>
                 </li>
               </ul>
