Добавлена возможность прикреплять видеоотзыв к практике. Используется существующая модель Video. Связь реализована через ManyToManyField. Обновлён шаблон practice_detail.html: добавлен блок с видеоотзывами, подключён общий инклуд video_block.html. Создан шаблон video_block.html для переиспользуемого вывода видео с поддержкой YouTube и Rutube, с модальным окном. Шаблон video_list.html переведён на использование инклуда. Добавлена миграция.

--- a/app/homeapp/templates/homeapp/practice_detail.html
+++ b/app/homeapp/templates/homeapp/practice_detail.html
@@ -32,8 +32,10 @@
             </ul>
         </div>
         {% endif %}
-
-        {% comment %} <a href="{% url 'practice_list' %}">Назад к списку практик</a> {% endcomment %}
+        {% if practice.videos.exists %}
+          <h3 class="mt-4">Видеоотзыв</h3>
+          {% include "homeapp/includes/video_block.html" with videos=practice.videos.all %}
+        {% endif %}
     </div>
 </div>
 
