--- a/app/homeapp/templates/homeapp/base.html
+++ b/app/homeapp/templates/homeapp/base.html
@@ -5,7 +5,21 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>{{ title }}</title>
+    {% block meta %}
+      <title>{{ meta.title|default:title }}</title>
+      <meta name="description" content="{{ meta.description|default:title }}">
+      <meta name="keywords" content="{{ meta.keywords }}">
+      <meta name="robots" content="index, follow">
+
+      <meta property="og:title" content="{{ meta.title|default:title }}">
+      <meta property="og:description" content="{{ meta.description|default:title }}">
+      <meta property="og:type" content="website">
+      <meta property="og:url" content="{{ request.build_absolute_uri }}">
+      <meta property="og:locale" content="ru_RU">
+      {% if meta.image %}
+        <meta property="og:image" content="{{ meta.image }}">
+      {% endif %}
+    {% endblock %}
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
