--- a/app/homeapp/templates/homeapp/includes/video_block.html
+++ b/app/homeapp/templates/homeapp/includes/video_block.html
@@ -18,7 +18,7 @@
       </div>
       <div class="card-body">
         <h5 class="card-title">{{ video.title }}</h5>
-        <p class="card-text text-muted">{{ video.published_at|date:"d.m.Y" }}</p>
+        <span class="card-text text-muted">{{ video.published_at|date:"d.m.Y" }}</span>
       </div>
     </div>
   </div>
