--- a/app/homeapp/templates/homeapp/news_list.html
+++ b/app/homeapp/templates/homeapp/news_list.html
@@ -2,78 +2,23 @@
 {% load static %}
 {% block content %}
 
-{% comment %} {% if News %}
-<section class="news-section container mb-0">
-    <div class="page-section">
-        <div class="news-section__content news_feed_header">
-            <h1 class="news_item_header page-section__title">Новости и публикации</h1>
-        </div>
-        <div class="news_feed_content">
-            <div class="row">
-                <!-- Самая свежая новость -->
-                {% if News %}
-                <div class="col-md-5">
-                    <div class="news_item latest_news">
-                        <div class="news_item_header">
-                            <p class="news__date">{{ News.0.create_datetime }}</p>
-                            <h2 class="page-section__title">{{ News.0.title }}</h2>
-                        </div>
-                        <div class="news_item_content">
-                            <p>{{ News.0.text|safe|truncatechars:100 }}</p>
-                        </div>
-                        <div class="button-container" style="text-align: right;">
-                            <a href="/news_{{ News.0.slug }}" class="btn btn-primary">Читать далее</a>
-                        </div>
-
-                    </div>
-                </div>
-
-                <!-- Остальные новости -->
-                <div class="col-md-6">
-                    <ul class="list_of_news">
-                        {% for news in News|slice:"1:6" %}
-                        <li class="news-line">
-                            <div class="news_item_content line">
-                                <p>{{ news.create_datetime|date:"d-m-Y H:i:s" }} - <a href="/news_{{ news.slug }}">{{
-                                        news.title }}</a></p>
-                            </div>
-                        </li>
-                        {% endfor %}
-                    </ul>
-                </div>
-                {% endif %}
-            </div>
-        </div>
-    </div>
-</section> {% endcomment %}
-
 {% if News %}
 <section class="news-section container">
     <div class="page-section">
         <div class="news_feed_header">
-            <h1 class="page-section__title">Новости и публикации</h1>
+            <h1 class="title title_h2">Новости и публикации</h1>
         </div>
-        <div class="news-section__content news_feed_content swiper mySlider">
-            <div class="news_content_wrapper swiper-wrapper">
-                {% for news in News %}
-                <a class="swiper-slide" href="/news_{{ news.slug }}">
-                    <div class="news_item">
-                        <div class="news_content-group">
-                            <div class="news__header">
-                                <h1 class="news__title">{{ news.title }}</h1>
-                                <p class="news__date">{{ news.create_datetime }}</p>
-                            </div>
-                            <div class="news_item_content">
-                                <p>{{ news.text|safe }}</p>
-                            </div>
-                            <div>{{ news.video_link.striptags }}</div>
-                        </div>
-                        <div class="news_item_fakelink">Подробнее</div>
-                    </div>
-                </a>
-                {% endfor %}
-            </div>
-        </div>
+        <ul class="news__list">
+            {% for news in News %}
+                <li class="news__item">
+                    <a class="news__item-link" href="/news_{{ news.slug }}">
+                        <img class="news__item-image" src="{% static 'homeapp/img/main_img_1.jpg' %}" class="news__item-image" alt="">
+                        <h3 class="news__item-title">{{ news.title }}</h3>
+                        <time class="news__item-date" datetime="{{ news.create_datetime }}">{{ news.create_datetime }}</time>
+                    </a>
+                </li>
+            {% endfor %}
+        </ul>
     </div>
 <div class="form-wrapper">
     {% include "homeapp/forms/amo-form.html" %}
