--- a/app/homeapp/templates/homeapp/video_list.html
+++ b/app/homeapp/templates/homeapp/video_list.html
@@ -2,9 +2,12 @@
 {% load static %}
 
 {% block content %}
-<div class="container mt-5 mb-5">
-  <h1 class="mb-4">Видео</h1>
-
+<section class="news-section container">
+    <div class="page-section">
+      <div class="news_feed_header">
+        <h1 class="title title_h2">Видео</h1>
+      </div>
   {% include "homeapp/includes/video_block.html" with videos=videos title="" %}
-</div>
+  </div>
+</section>
 {% endblock %}
